<resources>
    <string name="app_name">FirstTask</string>
    <string name="barash_sad">barash_sad ∨</string>
    <string name="plus">+</string>
    <string name="_20">20</string>
    <string name="_1018">1018</string>
    <string name="_88">88</string>
    <string name="публикации">Публикации</string>
    <string name="подписуны">Подписчики</string>
    <string name="подписьки">Подписки</string>
    <string name="barashsad">BarashSad</string>
    <string name="redprof">Редактировать профиль</string>
    <string name="actual">Актуальное из историй</string>
    <string name="name">name</string>
    <string name="вход">Вход</string>
    <string name="ещенетаккаунта">Еще нет аккаунта?</string>
    <string name="региструруйсяблин">Зарегистрируйтесь.</string>
    <string name="параметрывхода">Электронный адрес или никнейм</string>
    <string name="пароль">Пароль</string>
    <string name="instagram">Instagram</string>
    <string name="регистрация">Регистрация</string>
    <string name="зарегистрироваться">Зарегистрироваться</string>
    <string name="e_mail">E-mail</string>
    <string name="введите_ваш_ник">Введите Ваш ник</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>