<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ava"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barash"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/barash_sad"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/plusPic"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/plusPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/_20"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ava"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/_1018"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/_88"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ava"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/публикации"
        android:textAlignment="center"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/подписуны"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLength="8"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/подписьки"
        android:textAlignment="center"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/menuPic"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <EditText
        android:id="@+id/nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/barashsad"
        android:textColor="#FFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ava"
        tools:ignore="MissingConstraints"
        android:inputType="text"/>

    <Button
        android:id="@+id/redprof"
        android:layout_width="352dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border_button"
        android:text="@string/redprof"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:backgroundTintMode="multiply"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nick"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/actual"
        android:textColor="#FFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/redprof"
        app:layout_constraintTop_toBottomOf="@+id/redprof" />

    <ImageView
        android:id="@+id/manInPic"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/setka"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/man_in_pic"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/setka"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/manInPic"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/setka"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33333334" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66666667" />

    <ImageView
        android:id="@+id/ph1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setka"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_66"
        app:layout_constraintStart_toStartOf="@id/gl_33"
        app:layout_constraintTop_toBottomOf="@+id/setka"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_66"
        app:layout_constraintTop_toBottomOf="@+id/setka"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph1"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_66"
        app:layout_constraintStart_toStartOf="@id/gl_33"
        app:layout_constraintTop_toBottomOf="@+id/ph1"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph6"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_66"
        app:layout_constraintTop_toBottomOf="@+id/ph1"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph7"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ph4"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph8"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/gl_66"
        app:layout_constraintStart_toStartOf="@id/gl_33"
        app:layout_constraintTop_toBottomOf="@+id/ph4"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ph9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ph9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_66"
        app:layout_constraintTop_toBottomOf="@+id/ph4"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>

